tests/primary_loc/primary_loc.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Cannot call `f` with `"asdf"` bound to the first parameter because string [1] is incompatible with number [2].
[incompatible-call]

   test.js:5:3
   5| f("asdf");
        ^^^^^^ [1]

References:
   test.js:2:21
   2| declare function f (number) : string;
                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:2

Cannot cast `3` to `T` because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:10:2
   10| (3 : T);
        ^ [1]

References:
   test.js:10:6
   10| (3 : T);
            ^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:19:23

Cannot resolve module `react`. [cannot-resolve-module]

   19| const React = require('react');
                             ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:24:45

Cannot use `Node` as a type because it is an `any`-typed value. Type `Node` properly, so it is no longer `any`-typed, to
use it as an annotation. [value-as-type]

   24| declare function MyComponent(props: Props): React.Node;
                                                   ^^^^^^^^^^


Warning ---------------------------------------------------------------------------------------------------- test.js:1:1

Unused suppression comment.

   1| //$FlowFixMe (unused)
      ^^^^^^^^^^^^^^^^^^^^^


Warning ---------------------------------------------------------------------------------------------------- test.js:7:1

Unused suppression comment.

   7| //$FlowFixMe (unused)
      ^^^^^^^^^^^^^^^^^^^^^


Warning --------------------------------------------------------------------------------------------------- test.js:26:1

Unused suppression comment.

   26| // $FlowFixMe unused
       ^^^^^^^^^^^^^^^^^^^^



Found 4 errors and 3 warnings
